css/main.css
@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@400;600;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Overpass", sans-serif;
  overflow-x: hidden;
}

body.modal-open {
  overflow: hidden;
}

/*********************/
/********Navbar*******/
/*********************/
.navbar {
  border-bottom: 8px solid #b0cb1f;
  /* padding: 1% 7%; */
  /* height: 90px; */
}

nav .navbar-nav .nav-item:hover {
  color: #f36f21;
}

.navbar-toggler {
  background-color: #b0cb1f;
  border: none;
  /* padding: 10px 6px; */
  outline: none;
}

/* .navbar-toggler span {
  display: block;
  width: 22px;
  height: 2px;
  border: 1px;
  background: #fff;
}
*/

/*
.navbar-toggler span + span {
  margin-top: 4px;
  width: 18px;
  margin-left: 4px;
}
*/

/*
.navbar-toggler span + span + span {
  width: 10px;
  margin-left: 10px;
}
*/

.navbar-expand-lg .navbar-nav .nav-link {
  font-size: 1.1rem;
  color: black;
}

.navbar-expand-lg .navbar-nav .nav-link:hover {
  color: #f36f21;
}

.navbar-light .navbar-nav .nav-link.active {
  border-bottom: 4px solid #f36f21;
}

.btn {
  background-color: #e31e24;
  opacity: 1;
  height: 40px;
  width: 90px;
  border: none;
  border-radius: 8px;
  color: white;
}

.btn:hover {
  color: white;
  background-color: #f36f21;
}

.dropdown-menu {
  border-radius: 10px;
}

.dropdown-item {
  padding: 1.2rem;
}

/*****************************/
/***Communication section*****/
/*****************************/
.communication {
  position: relative;
  display: flex;
  margin-top: 30px;
  /* height: calc(95vh - 100px); */
  background-image: url(../images/indexbgimg.png);
  opacity: 1;
}

.color-overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
  background-color: #f36f21;
  opacity: 0.8;
}

.communication #comm-wrapper {
  padding-top: 70px;
  padding-bottom: 20px;
  padding-left: 85px;
  padding-right: 85px;
}

.communication img {
  position: relative;
  left: 100px;
  bottom: 30px;
  z-index: 1;
}

.communication .communication-content {
  position: relative;
  z-index: 2;
  padding: 2% 7%;
}

.communication .communication-content h4 {
  font-size: 30px;
  color: white;
  margin-bottom: 24px;
}

.communication .communication-content h2 {
  font-size: 50px;
  font-weight: bolder;
}

.communication-content button {
  height: 55px;
  width: 220px;
  background-color: #1c295e;
  border: none;
  border-radius: 8px;
  margin-top: 25px;
}

.communication-content button:hover {
  background-color: #e31e24;
  opacity: 1;
}

.communication-content button a {
  font-family: "Overpass", sans-serif;
  text-decoration: none;
  color: white;
  font-size: 18px;
  font-weight: bold;
}

.communication-content button i {
  color: white;
  margin-left: 3px;
}

.communication .mission {
  position: absolute;
  left: 0;
  width: 100%;
  height: 68px;
  background-color: #43240f;
  text-align: center;
  justify-content: center;
  top: 540px;
  opacity: 0.7;
  z-index: 1;
}

.communication .mission button {
  height: 36px;
  width: 92px;
  font-size: 16px;
  border: 1px solid white;
  border-radius: 8px;
  background: transparent;
  color: white;
  font-family: "Overpass", sans-serif;
}

.mission button:hover {
  background: #f36f21;
  cursor: pointer;
  border: none;
}

/**** POPUP CONTENT ******/
.mission-header {
  background-color: #ecd1c2;
  opacity: 0.9;
  color: #000000;
  height: 70px;
  text-align: center;
  padding-top: 20px;
}

/* .popup-content .heading hr {
  width: 15%;
  margin: 0 auto;
  height: 5px;
  border-radius: 10px;
  color: #f36f21;
  opacity: 1;
} */

/**********************************/
/********Divisions section*********/
/**********************************/
.divisions {
  padding: 5% 7%;
  background-color: #fff;
  text-align: center;
}

.divisions h3 {
  font-size: 40px;
}

.divisions hr {
  width: 50px;
  margin: 30px auto;
  background-color: #f36f21;
  opacity: 1;
  height: 4px;
  border: none;
  border-radius: 8px;
  left: 500px;
}

.divisions p {
  font-size: 14px;
}

.divisions a {
  background-color: #e31e24;
  color: white;
  opacity: 85%;
  font-size: 12px;
  width: 93px;
  height: 39px;
  border: none;
  border-radius: 10px;
  padding: 10px;
}

.divisions a:hover {
  background-color: #e31e24;
  opacity: 1;
}

.divisions img {
  width: 125px;
  height: 125px;
}

.divisions .row {
  justify-content: space-between;
  margin-top: 68px;
}

.divisions .row .col {
  width: 400px;
}

.divisions .row .col .card {
  align-items: center;
  box-shadow: -3px 3px 10px rgba(0, 0, 0, 0.4);
}

.divisions .row .col .card .card-head {
  padding: 37px 90px;
}

.divisions .row .col .card .card-body {
  background-color: #e4e4e4;
  padding: 26px;
}

.divisions .row .col .card .card-body h5 {
  font-weight: bold;
}

.divisions .row .col .card .card-body i {
  margin-left: 10px;
}

/***********************************/
/***** Impact Section ************/
/***********************************/
.impact {
  padding: 5% 7%;
  text-align: center;
  background-color: #43240f;
}

.impact h3 {
  font-size: 40px;
  color: white;
}

.impact hr {
  width: 50px;
  margin: 30px auto;
  background-color: #fff;
  opacity: 1;
  height: 4px;
  border: none;
  border-radius: 8px;
  left: 500px;
}

.impact-content {
  display: flex;
  justify-content: space-between;
  margin-top: 4rem;
}

.impact-content p {
  color: #fff;
  text-align: left;
  line-height: 2.5;
}

.impact-content-intro {
  margin-bottom: 40px;
}

.impact-content img {
  width: 30.5rem;
  height: 17rem;
  margin-left: 1.875rem;
}

/*******************************/
/***** Programs section ********/
/*******************************/
.programs {
  padding: 5% 7%;
  background-color: white;
  text-align: center;
}

.programs h3 {
  font-size: 40px;
}

.programs hr {
  width: 50px;
  margin: 30px auto 65px;
  background-color: #f36f21;
  opacity: 1;
  height: 4px;
  border: none;
  border-radius: 8px;
  left: 500px;
}
/* ... */

